First Widget Build Successfully

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="action_widget_description">Action button for triggering action</string>
     <string name="open_car">Open Car</string>
+    <string name="you_need_to_login">You need to login</string>
 </resources>
