--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_widget_description">Action button for triggering action</string>
     <string name="open_car">Open Car</string>
     <string name="you_need_to_login">You need to login</string>
+    <string name="select_widget">Select Widget</string>
+    <string name="select_a_action">Select a action</string>
 </resources>
