--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="select_a_action">Select a action</string>
     <string name="name_your_widget">Name your widget</string>
     <string name="select_widget">Select Widget</string>
-    <string name="no_name">No Name</string>
+    <string name="name">Name</string>
 </resources>
